--- a/views/index.html
+++ b/views/index.html
@@ -1,3 +1,9 @@
+
+
+
+
+
+<!--
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -28,5 +34,27 @@
           </div>
         </div>
       </div>
+</body>
+</html>
+
+-->
+
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>네이버 지도</title>
+    <script src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=YOUR_CLIENT_ID"></script>
+</head>
+<body>
+    <div id="map" style="width:100%; height:500px;"></div>
+    <script>
+        const mapOptions = {
+            center: new naver.maps.LatLng(37.5665, 126.9780),
+            zoom: 14
+        };
+        const map = new naver.maps.Map('map', mapOptions);
+    </script>
 </body>
 </html>
